--- a/.gitignore
+++ b/.gitignore
@@ -116,4 +116,8 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+# mac os
+.DS_Store
+**/.DS_Store
+
 
